# RTL-Agent

./: .gitignore  README.md  pyproject.toml  testbench_generate.ipynb
src/mage/: gen_config.py  token_counter.py
src/silica/: agent.py  log_utils.py  token_counter.py
tests/: test_llm_chat.py  test_rtl_generator.py  test_single_agent.py  test_top_agent.py
