[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silica"
version = "1.0.1"
description = "SILICA: Open-source multi-agent LLM RTL code generator"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Dev Desai", email = "devdesaiofficial@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "config",
  "fsspec[http]<=2024.9.0,>=2023.1.0",
  "httpx<1,>=0.23.0",
  "llama-index-core",
  "llama-index-llms-anthropic",
  "llama-index-llms-openai",
  "llama-index-llms-vertex",
  "pre-commit",
  "pydantic",
  "rich",
  "tiktoken"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/DevDesai444/RTL-Agent.git"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = ["silica"]

[tool.setuptools.package-dir]
"" = "src"
